--- a/src/assets/css/myshop.scss
+++ b/src/assets/css/myshop.scss
@@ -121,6 +121,13 @@
 			}
 			.myshop__tear {
 				font-size: 130px;
+				.myshop_benefit_ship_free_message {
+					display: block;
+					margin-top: 20px;
+					padding-left: 10px;
+					font-size: 18px;
+					font-weight: 500;
+				}
 			}
 		}
 		.myshop__roundbox--split {
@@ -347,6 +354,11 @@
 				}
 				.myshop__tear {
 					font-size: 42px;
+					.myshop_benefit_ship_free_message {
+						margin-top: 9px;
+						padding-left: 3px;
+						font-size: 13px;
+					}
 				}
 			}
 			.myshop__roundbox--split {
