마이샵 > 멤버십

--- a/src/assets/css/myshop.scss
+++ b/src/assets/css/myshop.scss
@@ -2535,6 +2535,21 @@
 		}
 	}
 }
+.membership_button {
+	text-align: center;
+	.button {
+		display: inline-flex;
+		width: 214px;
+		height: 60px;
+		align-items: center;
+		justify-content: center;
+		background-color: #000000;
+		border-radius: 100vw;
+		font-size: 18px;
+		color: #ffffff;
+		overflow: hidden;
+	}
+}
 @include breakpoints.mobile() {
 	.membership-table_info {
 		display: flex;
@@ -2542,13 +2557,15 @@
 	.membership_row {
 		position: relative;
 		.membership_head {
-			padding: 20px 0;
+			width: 110px;
+			padding: 23px 0;
 			font-size: 16px;
 		}
 		.membership_item2 {
 			display: block;
 			padding: 20px 0;
 			font-size: 12px;
+			word-break: keep-all;
 			.membership_item {
 				margin-bottom: 10px;
 			}
@@ -2557,6 +2574,9 @@
 			margin-right: -3.37vw;
 			overflow-x: scroll;
 			-webkit-overflow-scrolling: touch;
+			border-bottom: 1px solid #000000;
+			margin-bottom: -1px;
+			z-index: 1;
 			table {
 				white-space: nowrap;
 			}
@@ -2565,12 +2585,24 @@
 			}
 			th, td {
 				flex: 1;
+				padding: 13px 0;
 				font-size: 12px;
 				padding-right: 40px;
 				&:first-child {
 					width: 110px;
 				}
 			}
+			td {
+				font-weight: 400;
+			}
+		}
+	}
+	.membership_button {
+		margin-top: 10px;
+		.button {
+			width: 140px;
+			height: 50px;
+			font-size: 14px;
 		}
 	}
 }
