마이페이지

--- a/src/assets/css/_components.scss
+++ b/src/assets/css/_components.scss
@@ -556,7 +556,7 @@
 	position: relative;
 	padding-right: 13px;
 	letter-spacing: -0.025em;
-	@include mixins.PtdRegular();
+	@include mixins.PtdMedium();
 	&:before {
 		content: '';
 		display: block;
