--- a/src/assets/css/myshop.scss
+++ b/src/assets/css/myshop.scss
@@ -406,6 +406,29 @@ input[type='radio'] {
 			@include mixins.PtdMedium();
 		}
 	}
+	.myshop__header--filter {
+		align-items: center;
+
+		.filter {
+			margin-left: auto;
+			margin-bottom: -10px;
+			.filter__row {
+				justify-content: flex-start;
+				gap: 4px;
+				height: 45px;
+			}
+			
+			input[type='text'],
+			input[type='password'],
+			input[type='number'],
+			input[type='tel'],
+			input[type='email'] {
+				height: 100%;
+				border-color: #000;
+				background-color: #fff;
+			}
+		}
+	}
 	.myshop__row {
 		display: flex;
 		gap: 10px;
@@ -1038,6 +1061,7 @@ input[type='radio'] {
 		}
 		.table-detail__tr {
 			display: flex;
+			align-items: baseline;
 			&:not(:first-child) {
 				margin-top: 40px;
 			}
@@ -1054,9 +1078,24 @@ input[type='radio'] {
 			padding-right: 15px;
 			font-size: 18px;
 			text-align: center;
+			.table-detail__text {
+				line-height: 28px;
+			}
 		}
 		.table-detail__left {
 			text-align: left;
+		}
+		.table-detail__auto {
+			flex: 0 0 auto;
+		}
+		.table-detail__10 {
+			width: 10%;
+		}
+		.table-detail__12 {
+			width: 12%;
+		}
+		.table-detail__15 {
+			width: 15%;
 		}
 		.table-detail__20 {
 			width: 20%;
@@ -1076,6 +1115,68 @@ input[type='radio'] {
 			}
 		}
 	}
+	.table-detail--notice {
+		.table-detail__tr {
+			align-items: center;
+			&:not(:first-child) {
+				margin-top: 70px;
+			}
+		}
+
+		.notice {
+			display: grid;
+			row-gap: 12px;
+			.notice__category {
+				display: flex;
+				align-items: center;
+				gap: 4px;
+				.notice__ico {
+					@include icons.retina-sprite(icons.$ico-login-security-group);
+				}
+			}
+			.notice__notice {
+				display: flex;
+				align-items: center;
+				flex-wrap: wrap;
+				column-gap: 7px;
+				row-gap: 12px;
+				.notice__flag {
+					display: none;
+					flex-shrink: 0;
+					align-items: center;
+					justify-content: center;
+					width: 65px;
+					height: 29px;
+					border: 1px solid #000;
+					border-radius: 6px;
+					font-weight: 500;
+					font-size: 13px;
+					text-align: center;
+				}
+				.notice__flag--answer {
+					display: flex;
+					background-color: #00eadc;
+				}
+				.notice__text {
+					flex: 1;
+					font-weight: 500;
+					font-size: 32px;
+				}
+				.notice__writer {
+					display: none;
+				}
+			}
+			.notice__date {
+				width: 100%;
+				font-size: 14px;
+			}
+		}
+	}
+	.table-detail--address {
+		.table-detail__td--mobile {
+			display: none;
+		}
+	}
 
 	.coupon {
 		letter-spacing: -0.025em;
@@ -1092,15 +1193,71 @@ input[type='radio'] {
 			border-radius: 22px;
 			background-repeat: no-repeat;
 			display: flex;
-		}
-		.coupon__item--summer {
-			background-color: #58e8ed;
+			&:before,
+			&:after {
+				content: '';
+				display: block;
+				position: absolute;
+				bottom: 91px;
+				left: -2px;
+				border-width: 5px 0 5px 10px;
+				border-style: solid;
+				border-color: transparent;
+				border-left-color: #fff;
+			}
+			&:before {
+				z-index: 2;
+			}
+			&:after {
+				z-index: 1;
+				left: 0;
+				border-left-color: #000;
+			}
+			&:nth-child(1) {
+				background-image: url('../images/bg_coupon01.png');
+				background-position: -107.52px -96px;
+				background-color: #58e8ed;
+			}
+			&:nth-child(2) {
+				background-image: url('../images/bg_coupon02.png');
+				background-position: -1.35vw calc(100% + 2px);
+				background-color: #ffb5d1;
+			}
+			&:nth-child(3) {
+				background-image: url('../images/bg_coupon03.png');
+				background-position: -1.09vw calc(100% + 3px);
+				background-color: #b7adf0;
+			}
 		}
 		.coupon__coupon {
 			display: flex;
 			flex-direction: column;
+			position: relative;
 			width: 100%;
 			height: 100%;
+			&:before,
+			&:after {
+				content: '';
+				display: block;
+				position: absolute;
+				bottom: 91px;
+				right: -2px;
+				border-width: 5px 10px 5px 0;
+				border-style: solid;
+				border-color: transparent;
+				border-right-color: #fff;
+			}
+			&:before {
+				z-index: 2;
+			}
+			&:after {
+				z-index: 1;
+				right: 0;
+				border-right-color: #000;
+			}
+			.coupon__top {
+				padding: 30px;
+			}
 			.coupon__bottom {
 				display: flex;
 				align-items: center;
@@ -1121,6 +1278,25 @@ input[type='radio'] {
 					background-size: 4px 2px;
 				}
 			}
+		}
+		.coupon__category {
+			margin-bottom: 20px;
+			padding: 0 4px;
+			font-weight: 500;
+		}
+		.coupon__name {
+			margin-bottom: 15px;
+			font-weight: 600;
+			font-size: 20px;
+		}
+		.coupon__discount {
+			margin-bottom: 15px;
+			font-weight: 600;
+			font-size: 46px;
+			line-height: 40px;
+		}
+		.coupon__price {
+			color: #010101;
 		}
 		.coupon__date {
 			font-size: 20px;
@@ -1281,6 +1457,54 @@ input[type='radio'] {
 			.myshop__title {
 				font-size: 20px;
 				letter-spacing: -0.012em;
+			}
+			.myshop__unit {
+				font-weight: 400;
+				font-size: 12px;
+			}
+		}
+		.myshop__header--filter {
+			flex-wrap: wrap;
+
+			.filter {
+				width: 100%;
+				padding: 0;
+				margin-top: 10px;
+				margin-bottom: 0;
+				.filter__row {
+					gap: 1.5px;
+					height: auto;
+					flex-wrap: wrap;
+					.filter__left {
+						display: grid;
+						grid-template-columns: 99.5px 1fr;
+						align-items: flex-start;
+						> * {
+							display: grid;
+						}
+					}
+					.filter__row {
+						display: grid;
+						grid-template-columns: 99.5px 1fr;
+					}
+				}
+				.filter__search {
+					display: flex;
+					height: 36.5px;
+					grid-column: 2 / 3;
+				}
+
+				.select {
+					min-width: 99.5px;
+				}
+
+				input[type='text'],
+				input[type='password'],
+				input[type='number'],
+				input[type='tel'],
+				input[type='email'] {
+					height: 36.5px;
+				}
 			}
 		}
 		.myshop__row {
@@ -1716,7 +1940,6 @@ input[type='radio'] {
 					display: grid;
 					grid-template-columns: 1fr auto;
 					gap: 6px;
-					// grid-template-rows: auto auto;
 					align-items: center;
 				}
 				.table-detail__td {
@@ -1737,6 +1960,215 @@ input[type='radio'] {
 						grid-row: 1 / 2;
 					}
 				}
+			}
+		}
+		.table-detail--notice {
+			.table-detail__tbody {
+				.table-detail__tr {
+					display: grid;
+					position: relative;
+				}
+				.table-detail__td {
+					width: auto !important;
+					padding-right: 0;
+					&:nth-child(3),
+					&:first-child,
+					&:last-child {
+						display: none;
+					}
+				}
+			}
+			.table-detail__tr {
+				&:not(:first-child) {
+					margin-top: 40px;
+				}
+			}
+
+			.notice {
+				grid-template-columns: 51px 1fr;
+				row-gap: 10px;
+				.notice__category {
+					grid-column: 2 / 3;
+					.notice__text {
+						font-size: 12px;
+					}
+					.notice__ico {
+						@include mixins.sprite(mo_icons.$ico-login-security);
+					}
+				}
+				.notice__notice {
+					display: grid;
+					grid-template-columns: 51px auto 1fr;
+					grid-column: 1 / 3;
+					gap: 0;
+					row-gap: 10px;
+					.notice__flag {
+						display: flex;
+						width: 40px;
+						height: 20px;
+						font-size: 10px;
+					}
+					.notice__text {
+						grid-column: 2 / 4;
+						font-size: 20px;
+					}
+					.notice__writer {
+						display: block;
+						grid-column: 2 / 3;
+						font-size: 11px;
+					}
+					.notice__date {
+						width: auto;
+						margin-left: 15px;
+						font-size: 11px;
+					}
+				}
+			}
+		}
+		.table-detail--address {
+			.table-detail__tbody {
+				.table-detail__tr {
+					display: grid;
+					align-items: center;
+					grid-template-columns: 31px 1fr;
+				}
+				.table-detail__td {
+					width: auto !important;
+					padding-right: 0;
+					&:nth-child(1) {
+						text-align: left;
+					}
+					&:nth-child(9) {
+						text-align: left;
+					}
+					&:nth-child(2),
+					&:nth-child(3),
+					&:nth-child(4),
+					&:nth-child(5),
+					&:nth-child(6),
+					&:nth-child(7),
+					&:nth-child(8) {
+						display: none;
+					}
+				}
+				.table-detail__td--mobile {
+					display: block;
+				}
+			}
+
+			.address {
+				.address__container {
+					display: grid;
+					align-items: center;
+					grid-template-columns: 1fr auto;
+					column-gap: 15px;
+				}
+				.address__row {
+					&:not(:first-child) {
+						margin-top: 10px;
+					}
+				}
+				.address__row--flex {
+					display: flex;
+					align-items: center;
+					gap: 9px;
+				}
+				.address__name {
+					font-weight: 600;	
+				}
+				.address__recipient {
+					font-weight: 600;
+				}
+				.address__address {
+					line-height: 18px;
+				}
+				.address__call {
+					color: #999;
+					&:not(:first-child) {
+						position: relative;
+						padding-left: 9px;
+						&:before {
+							content: '';
+							display: block;
+							position: absolute;
+							left: 0;
+							top: 50%;
+							width: 1px;
+							height: 10px;
+							margin-top: -5px;
+							background-color: #dfdfdf;
+						}
+					}
+				}
+			}
+		}
+
+		.coupon {
+			letter-spacing: -0.012em;
+			.coupon__list {
+				grid-template-columns: 1fr;
+				gap: 6px;
+			}
+			.coupon__item {
+				height: auto;
+				&:before,
+				&:after {
+					display: none;
+				}
+				&:nth-child(1) {
+					background-image: url('../images/m_bg_coupon01.png');
+					background-position: 37.2vw 50%;
+					background-size: 83.6vw auto;
+				}
+				&:nth-child(2) {
+					background-image: url('../images/m_bg_coupon02.png');
+					background-position: calc(100% + 4vw) 50%;
+					background-size: 46.27vw auto;
+				}
+				&:nth-child(3) {
+					background-image: url('../images/m_bg_coupon03.png');
+					background-position: calc(100% + 4vw) 0;
+					background-size: 42.53vw auto;
+				}
+			}
+			.coupon__coupon {
+				padding: 16px;
+				&:before,
+				&:after {
+					display: none;
+				}
+				.coupon__top {
+					padding: 0;
+				}
+				.coupon__bottom {
+					position: absolute;
+					right: 16px;
+					top: 16px;
+					height: auto;
+					&:before {
+						display: none;
+					}
+				}
+			}
+			.coupon__category {
+				margin-bottom: 14px;
+				padding: 0;
+				font-size: 12px;
+			}
+			.coupon__date {
+				font-size: 12px;
+			}
+			.coupon__name {
+				margin-bottom: 10px;
+				font-size: 14px;
+			}
+			.coupon__discount {
+				margin-bottom: 10px;
+				font-size: 32px;
+				line-height: inherit;
+			}
+			.coupon__price {
+				font-size: 12px;
 			}
 		}
 	}
