--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -486,6 +486,7 @@
         top: 50%;
         left: 50%;
         width: 100%;
+        height: 100%;
         @include mixins.translate(-50%, -50%);
         object-fit: cover;
       }
