--- a/src/assets/css/addr_pop.scss
+++ b/src/assets/css/addr_pop.scss
@@ -82,7 +82,7 @@
         }
       }
 
-      input[type=text], select {
+      input[type=text], input[type=password], select {
         min-width: 110px;
         height: 56px;
         padding: 0 40px 0 24px;
