--- a/src/assets/css/_layout.scss
+++ b/src/assets/css/_layout.scss
@@ -574,6 +574,13 @@
 	@include breakpoints.mobile() {
 		padding: 72px 0 85px;
 	}
+
+	textarea {
+		padding: 14px;
+		border: 1px solid #f4f4f7;
+		background-color: #f4f4f7;
+		outline: none;
+	}
 }
 
 // footer
